:bug: Adjustment of the overflowing container on the homepage.

--- a/src/app/styles/containers/boxprincipal.module.css
+++ b/src/app/styles/containers/boxprincipal.module.css
@@ -17,12 +17,6 @@
   margin: 0 16px 0 16px;
 }
 
-.bgContainerPrincipal {
-  width: 100%;
-  height: 52rem;
-  padding: 15rem 0 15rem 0;
-
-}
 
 .boxprincipal {
   display: flex;
@@ -33,7 +27,7 @@
 }
 
 .sc-bg-container {
-  width: 342px;
+  width: 380px;
 
 }
 
@@ -54,6 +48,15 @@
   padding: 36px 0;
 }
 
+
+.bgContainerPrincipal {
+  width: 110rem 0;
+  height: 52rem;
+  padding: 15rem 0 15rem 0;
+
+}
+
+
 @media screen and (max-width: 767px) {
   /* Estilos específicos para dispositivos móveis */
 
@@ -62,6 +65,12 @@
     overflow-x: hidden;
   }
   
+
+.bgContainerPrincipal {
+  width: 380px;
+
+}
+
   
   .bgContainer {
     width: 442px;
@@ -82,10 +91,6 @@
     overflow-x: hidden;
   }
   
-.bgContainerPrincipal {
-  width: 349px;
-
-}
   .btningresso-img {
     display: none;
   }
@@ -94,10 +99,7 @@
 @media screen and (min-width: 768px) {
   /* Altere para telas maiores */
 
-  .bgContainerPrincipal {
-    width: 100%;
   
-  }
   .boxprincipal {
     width: 980px;
     justify-content: space-between;
@@ -127,12 +129,9 @@
 @media screen and (min-width: 320px) and (max-width: 568px) {
   /* Estilos específicos para dispositivos com largura de tela de 320x568 */
 
-  .bgContainerPrincipal {
-    width: 349px;
   
-  }
   .sc-bg-container {
-    width: 260px; /* Usando a largura total */
+    width: 300px; /* Usando a largura total */
     margin-bottom: 10px; /* Adicionando espaço entre o texto e os botões */
   }
 
@@ -192,11 +191,6 @@
     width: 700px; /* Usando a largura total para tablets */
   
   }
-.bgContainerPrincipal {
-    padding: 25rem 0 15rem 0;
-
-  }
-
   .boxprincipal span,
   .boxprincipal h1 {
     color: var(--white);
